RH July 26, 2018 3:25pm

--- a/index.html
+++ b/index.html
@@ -463,7 +463,38 @@
 		</div>
 	</div>
 <!--End Footer-->
-
+<!--Footer
+	<div class="headwear-footer">
+		<div class="phone-number-footer">(307)734-8192
+			<div class="address-footer">45 W Broadway St.<br>Jackson, WY 83001</div>
+		</div>
+		<div class="days-footer">weekdays<br>saturday<br>sunday</div>
+		<div class="hours-footer">9am-6pm<br>12pm-6pm<br>closed</div>
+		<div class="images-footer">
+			<img src="assets/images/logowhite.png" alt="Footer Logo" class="headwear-footer-logo">
+			<div class="social-area-footer">
+				<img src="assets/images/instagram.png" alt="Instagram" class="social-in-footer">
+				<img src="assets/images/facebook-logo.png" alt="Facebook" class="social-in-footer">
+				<img src="assets/images/vimeo-logo.png" alt="Vimeo" class="social-in-footer">
+				<img src="assets/images/twitter-logo-silhouette.png" alt="Twitter" class="social-in-footer">
+			</div>
+		</div>
+		<div class="hours-footer right-side end">9am-6pm<br>12pm-6pm<br>closed</div>
+		<div class="days-footer right-side end">weekdays<br>saturday<br>sunday</div>
+		<div class="phone-number-footer right-side">(307)734-8192
+			<div class="address-footer right-side">45 W Broadway St.<br>Jackson, WY 83001</div>
+		</div>
+	</div>
+	<div class="images-footer2">
+		<img src="assets/images/logowhite.png" alt="Footer Logo" class="headwear-footer-logo">
+		<div class="social-area-footer">
+			<img src="assets/images/instagram.png" alt="Instagram" class="social-in-footer">
+			<img src="assets/images/facebook-logo.png" alt="Facebook" class="social-in-footer">
+			<img src="assets/images/vimeo-logo.png" alt="Vimeo" class="social-in-footer">
+			<img src="assets/images/twitter-logo-silhouette.png" alt="Twitter" class="social-in-footer">
+		</div>
+	</div>
+End Footer-->
 <!--JQuery-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/js/swiper.js"></script>
