--- a/headwear.html
+++ b/headwear.html
@@ -76,6 +76,15 @@
 						<div class="your-menu">
 							<img src="assets/images/a-biker.jpg" alt="Your Profile" class="your-hero">
 							<div class="your-overlay"></div>
+							<img src="assets/images/hats/31.jpg" alt="Your Profile" class="your-picture">
+							<div class="your-name">John Doe</div>
+							<div class="ship-address">shipping address</div>
+							<div class="your-address">1234 Torotown St.</div>
+							<div class="your-address2">City, ST - 12345</div>
+							<button class="edit-yours">Edit Profile</button>
+							<div class="not-you">Not you?</div>
+							<button class="sign-in">Sign In</button>
+							<span class="glyphicon your-cart"></span>
 						</div>
 					</div>
 				</div>
@@ -136,17 +145,17 @@
 			<button class="color-swatch swatch6"></button>
 		</div>
 		<div>
-			<button class="format-toggle-product">Shop By Product</button>
+			<button class="format-toggle-product switchFilters" href='#byProduct'>Shop By Product</button>
 			<li class="toggle-button">
 				<ul class="product"></ul>
 				<ul class="look"></ul>
 			</li> 
-			<button class="format-toggle-look">Shop By Look</button>
+			<button class="format-toggle-look switchFilters" href='#byLook'>Shop By Look</button>
 		</div>
 	</div>
 <!--End Filter Toggle-->
-<!--Filter Area-->
-	<div class="filter-area">
+<!--Filter Area 1-->
+	<div class="filter-area" id="byProduct">
 		<div class="filter-area-vertical-scroller">
 			<div class="vertical-scroll">
 				<!--Row 1-->
@@ -454,9 +463,8 @@
 					<img src="assets/images/IMG_4411_2.jpg" alt="Image Preview" class="boxed-lifestyle preview-image">
 				</div>
 			</div>
-			
 				<img src="assets/images/info.png" alt="Info" id="main-preview">
-				<!--<div class="preview-body">
+				<div class="preview-body">
 				<div class="hat-details">
 					<div class="details-title">Hat Name
 					</div>
@@ -469,7 +477,7 @@
 						</div>
 					</div>
 				</div>
-			</div>-->
+			</div>
 				<button class="right-arrow"><i class="material-icons preview-arrow">arrow_forward</i></button>
 			
 			<div class="preview-footer">
@@ -486,8 +494,84 @@
 					<button class="done">Done!</button>
 			</div>
 		</div>
-	<!--End Filter Preview-->
 	</div>
+	<!--End Filter Area 1-->
+	<!--Filter Area 2-->
+	<div class="filter-area" id="byLook">
+		<div class="filter-area-vertical-scroller">
+			<div class="vertical-scroll2">
+				<!--Row 1-->
+					<div class="card">
+						<div class="card-image2">
+							<img src="assets/images/hats/25.jpg" alt="Hat" class="image-source">
+							<div class="card-words">Hat Name $30</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image2">
+							<img src="assets/images/hats/27.jpg" alt="Hat" class="image-source">
+							<div class="card-words">Sarah Jones in Waffle Beanie</div>
+						</div>
+					</div>
+				<!--Row 2-->
+					<div class="card">
+						<div class="card-image2">
+							<img src="assets/images/hats/26.jpg" alt="Hat" class="image-source">
+							<div class="card-words">Athlete in Classic Black $30</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-image2">
+							<img src="assets/images/hats/28.jpg" alt="Hat" class="image-source">
+							<div class="card-words">Hat Name $30</div>
+						</div>
+					</div>
+					<div class="big-card">
+						<div class="big-card-image">
+							<img src="assets/images/hats/29.jpg" alt="Hat" class="big-image-source">
+							<div class="big-words">Athlete in Classic Black $30</div>
+						</div>
+					</div>
+					<div class="big-card">
+						<div class="big-card-image">
+							<img src="assets/images/hats/30.jpg" alt="Hat" class="big-image-source">
+							<div class="big-words">Athlete in Classic Black $30</div>
+						</div>
+					</div>
+				</div>
+			</div>
+<!--Filter Preview-->
+		<div class="filter-preview">
+			<div class="preview-information">
+				<div class="preview-box">
+					<img src="assets/images/info.png" alt="Info" class="info preview-image">
+				</div>
+				<div class="preview-box opacity">
+					<img src="assets/images/hats/4.png" alt="Image Preview" class="boxed-img preview-image">
+				</div>
+				<div class="preview-box opacity">
+					<img src="assets/images/IMG_4411_2.jpg" alt="Image Preview" class="boxed-lifestyle preview-image">
+				</div>
+			</div>
+				<img src="assets/images/info.png" alt="Info" id="main-preview">
+				<button class="right-arrow"><i class="material-icons preview-arrow">arrow_forward</i></button>
+			<div class="preview-footer">
+				<div class="color-holder">
+					<button class="preview-color black"></button>
+					<button class="preview-color green"></button>
+				</div>
+					<div class="preview-quantity">Quantity</div>
+				<div class="quantity-holder">
+					<button class="preview-remove"><i class="material-icons preview-remove">remove</i></button>
+					<input type="text" name="quantity" value="1" class="quantity">
+					<button class="preview-remove"><i class="material-icons preview-remove">add</i></button>
+				</div>
+					<button class="done">Done!</button>
+			</div>
+		</div>	
+	</div>
+	<!--End Filter Area 2-->
+	
 <!--End Filter Toggle-->
 <!--On the Blog-->
 	<div class="blog-title">On the Blog</div>
@@ -541,7 +625,8 @@
 		<p class="social-nav1">Become an Ambassador</p>
 		<p class="social-nav2">#WearTheDream</p>
 		<p class="social-nav3">@TGRShop</p>
-	</div><!-- Swiper -->
+	</div>
+<!-- Swiper -->
   	<div class="swiper-container swiper-headwear">
 	    <div class="swiper-wrapper">
 	      <div class="swiper-slide">
@@ -663,7 +748,6 @@
 			<img src="assets/images/twitter-logo-silhouette.png" alt="Twitter" class="social-in-footer">
 		</div>
 	</div>
-
 <!--End Footer-->
 <!--JQuery-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
